# fantasyFootballProjections

./: .gitignore  .~lock.projection_test_scores_v306.csv#  BENCHMARKS.md  MASTER_PLAN.md  METHODOLOGY.md  MODEL_MANAGEMENT.md  NFL_DATA_MIGRATION_PLAN.md  README.md  ROADMAP.md  VISION.md  action_plan.md  air_yards_kde  analyze_calibration_failures.py  benchmark.py  check_teams.py  data_enrichment_plan.md  data_inventory.md  diagnose_qb_fail_high.py  documentation_plan.md  enums.py  feature_injection_plan.md  generate_golden_master.py  hypotheses.md  kicking_regression_model  llms.txt  main.py  mkdocs.yml  offense_stats.csv  playcall_regression_model  projection.py  pyproject.toml  qb_analysis_plan.md  qb_rushing_plan.md  rebuild_models.py  score.py  settings.py  setup_history.py  snap_share_plan.md  statistical_plan.md  target_share_plan.md  (+8 more)
.gemini/: GEMINI.md
benchmarks/: details_v440_full.csv  details_v441_fix.csv  details_v442_playcall.csv  details_v443_fgoe_fix.csv  details_v444_gfi.csv  details_v445_split_scramble.csv  details_v446_goal_line.csv  results_baseline_v1.json  results_baseline_v2.json  results_v403_config_scoring.json  results_v403_variance_injection.json  results_v404_full_optimization.json  results_v405_speed_boost.json  results_v406_verify.json  results_v440_full.json  results_v441_fix.json  results_v442_playcall.json  results_v443_fgoe_fix.json  results_v444_gfi.json  results_v445_split_scramble.json  results_v446_goal_line.json
config/: scoring.yaml
data/: loader.py  nfl_client.py
docs/: index.md
docs/api/: index.md
engine/: game.py
evaluation/: calibration.py
models/: completion.py  int_return.py  kicking.py  playcall.py  receivers.py  rushers.py
models/trained_models/: air_yards_kde  air_yards_kde_rb  air_yards_kde_te  air_yards_kde_wr  completion_regression_model  int_return_yards_kde  kicking_regression_model  rushing_yards_kde  (+16 more)
players/: player_stats.py  positions.py
projections/: .~lock.v402_ros_mean.csv#  .~lock.w12_v402_flex.csv#  .~lock.w14_v306_rb.csv#  .~lock.w15_v306_flex.csv#  .~lock.w15_v306_qb.csv#  .~lock.w16_v306_flex.csv#  .~lock.w16_v306_te.csv#  .~lock.w17_v306_flex.csv#  .~lock.w17_v306_qb.csv#  .~lock.w17_v306_rb.csv#  .~lock.w4_v402_flex.csv#  .~lock.w5_v402_te.csv#  .~lock.w7_v402_flex.csv#  .~lock.w9_v402_flex.csv#
reporting/: html_generator.py
schedule/: schedule.py
stats/: .players.py.swp  clock.py  injuries.py  league.py  loader.py  players.py  stats_loader.py  teams.py  util.py
strategies/: adjust_to_opponent.py  strategy.py  target_share_model.py
teams/: stats.py
tests/: conftest.py  debug_negative_scores.py  diagnose_fail_high.py  diagnose_qb_error.py  regression_test.py  test_engine.py  test_score.py  test_scoring_config.py  test_scoring_integrity.py  test_settings.py  test_smoke.py  verify_injuries.py  verify_migration.py  verify_pbp_compatibility.py  verify_players.py
(+5 files in other folders)
