[project]
name = "fantasy-football-projections"
version = "0.1.0"
description = "Monte Carlo simulation engine for NFL fantasy football"
authors = [
    {name = "Stefan"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (<2.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "nfl-data-py (>=0.3.3,<0.4.0)",
    "joblib (>=1.5.2,<2.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "scipy (<1.16)",
    "numpy (<2.0)",
    "statsmodels (>=0.14.5,<0.15.0)",
    "requests (>=2.32.5,<3.0.0)",
    "beautifulsoup4 (>=4.14.2,<5.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "line-profiler (>=5.0.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]
