[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fantasy-football-projections"
version = "0.1.0"
description = "Monte Carlo simulation engine for NFL fantasy football"
authors = [
    {name = "Stefan"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "joblib>=1.5.2",
    "line-profiler>=5.0.0",
    "matplotlib>=3.10.7",
    "nfl-data-py>=0.3.3",
    "numpy<2.0",
    "pandas<2.0",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "scipy<1.16",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["stats", "engine", "models", "evaluation", "reporting", "data"]
